[project]
name = "pss-fleet-data"
version = "9.2.0"
description = "A tool to obtain data about fleets of Pixel Starships."
authors = [
    { name = "The worst.", email = "theworstpss@gmail.com" }
]
dependencies = [
    "google-auth==1.20.0",
    "PyDrive==1.3.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.10.14"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "autoflake>=2.3.1",
    "black>=24.4.2",
    "flake8>=7.1.0",
    "flake8-black>=0.3.6",
    "flake8-bugbear>=24.4.26",
    "isort>=5.13.2",
    "pytest>=7.2.1",
    "pytest-asyncio>=0.23.7",
    "pytest-env>=1.1.3",
    "vulture>=2.11",
]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true
recursive = true

[tool.black]
line-length = 150
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
src_paths = ["src"]
profile = "black"
line_length = 150
lines_after_imports = 2

[tool.vulture]
min_confidence = 100
paths = ["./src"]
sort_by_size = true